--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <table>
                     <tr><th>Version</th><th>Released</th></tr>
                     <!-- %%VERSION_LIST_START%% -->
+<tr><td><a href="0.1.4">0.1.4</a></td><td>2020-05-13</td></tr>
 <tr><td><a href="0.1.3">0.1.3</a></td><td>2019-10-30</td></tr>
 <tr><td><a href="0.1.2">0.1.2</a></td><td>2018-10-26</td></tr>
 <tr><td><a href="0.1.1">0.1.1</a></td><td>2018-05-24</td></tr>
